--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
 body{
     background-color: lightgreen;
+    margin: 0;
+}
+
+h1{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.banda1{
+    background-color: black;
+    width: 150px; height: 300px;
+
+    margin: 5px;
+}
+.banda2{
+    background-color: black;
+    width: 150px; height: 300px;
+    margin: 5px;
+}
+
+.banda3{
+    background-color: black;
+    width: 150px; height: 300px;
+    margin: 5px;
+}
+
+.banda4{
+    background-color: gold;
+    width: 150px; height: 300px;
+    margin: 5px;
+}
+
+.dvs{
+    display: inline-flex;
+    margin-left: 640px;
+}
+
+.conten{
+    display: inline-flex;
+    margin-left: 640px;
+    size: 20px;
 }
